Java8 Interview Coding Questions Part-2